hledger/test/errors/autobalanced.j
#!/usr/bin/env -S hledger check -f

2022/1/1
  a  1
